Fix: Hide before align

--- a/__core.scss
+++ b/__core.scss
@@ -194,7 +194,7 @@
 			padding-right: 0;
 
 			&:before {
-				display: none;
+				display: none !important;
 			}
 		}
 	}
